# libsio

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  contexts.jsonl  lm.jsonl  run.sh  sio.json  sio_stt.cc  stt.cc  stt_c.cc
sio/: allocator.h  allocator_test.cc  audio.cc  audio.h  audio_test.cc  base.h  beam_search.h  dbg.h  dbg_macro.h  dbg_test.cc  error.cc  error.h  feature_extractor.h  feature_extractor_test.cc  finite_state_machine.h  json.h  kenlm.h  language_model.h  language_model_impl.h  language_model_itf.h  language_model_test.cc  logger_test.cc  mean_var_norm.h  ptr.h  scorer.h  search.h  sio.cc  sio.h  sio_stt.cc  sio_stt.h  speech_to_text.h  struct_loader.h  struct_loader_test.cc  stt.h  tokenizer.h
src/: sio.cc  sio.h
src/sio/: allocator.h  allocator_test.cc  audio.h  beam_search.h  check_test.cc  error.h  feature_extractor.h  feature_extractor_test.cc  finite_state_machine_test.cc  finite_state_transducer.h  finite_state_transducer_test.cc  fst.h  fst_test.cc  json.h  kenlm.h  language_model.h  language_model_impl.h  map.h  mean_var_norm.h  scorer.h  speech_to_text.h  speech_to_text_config.h  speech_to_text_model.h  speech_to_text_module.h  speech_to_text_runtime.h  str.h  stt.h  token_topology.h  token_topology_test.cc  tokenizer.h
testdata/: token_topo.int
torchscript_playground/: run.sh
utils/: setup.sh  setup_abseil.sh  setup_kaldi.sh  setup_kenlm.sh  setup_libtorch.sh  setup_submodules.sh  submodule_create.sh  submodule_delete.sh
utils/admin/: submodule_create.sh
